Assertion failure for bound function with custom prototype and Reflect.construct https://bugs.webkit.org/show_bug.cgi?id=157081

Reviewed by Saam Barati.

We ensured `newTarget != exec->callee()`. However, it does not mean `newTarget.get("prototype") != exec->callee()->get("prototype")`.
When the given `prototype` is the same to `baseStructure->sotredPrototype()`, it is unnecessary to create a new structure from this
baseStructure.

* bytecode/InternalFunctionAllocationProfile.h:
(JSC::InternalFunctionAllocationProfile::createAllocationStructureFromBase):
* tests/stress/custom-prototype-may-be-same-to-original-one.js: Added.
(shouldBe):
(boundFunction):


Canonical link: https://commits.webkit.org/175357@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200319 268f45cc-cd09-0410-ab3c-d52691b4dbfc